Updated NetisHR files

--- a/netishr/administrator_leave_configuration.html
+++ b/netishr/administrator_leave_configuration.html
@@ -828,6 +828,10 @@
                                                                             <label class="control-label pull-left">Quota Per Request</label>
                                                                             <input type="text" class="form-control pull-right" value="2 " />
                                                                         </div>
+                                                                        <div class="form-group">
+                                                                            <label class="control-label pull-left">Quota Per Year</label>
+                                                                            <input type="text" class="form-control pull-right" value="365 " />
+                                                                        </div>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -847,6 +851,7 @@
                                                             <th>Label</th>
                                                             <th>Description</th>
                                                             <th>Quota per Request</th>
+                                                            <th>Quota per Year</th>
                                                             <th class="text-right">
                                                             </th>
                                                         </tr>
@@ -862,6 +867,9 @@
                                                             </td>
                                                             <td>
                                                                 2
+                                                            </td>
+                                                            <td>
+                                                                365
                                                             </td>
                                                             <td class="text-right">
                                                                 <div class="btn-group">
@@ -882,6 +890,9 @@
                                                             <td>
                                                                 3
                                                             </td>
+                                                            <td>
+                                                                365
+                                                            </td>
                                                             <td class="text-right">
                                                                 <div class="btn-group">
 
@@ -900,6 +911,9 @@
                                                             </td>
                                                             <td>
                                                                 2
+                                                            </td>
+                                                            <td>
+                                                                365
                                                             </td>
                                                             <td class="text-right">
                                                                 <div class="btn-group">
@@ -920,6 +934,9 @@
                                                             <td>
                                                                 2
                                                             </td>
+                                                            <td>
+                                                                365
+                                                            </td>
                                                             <td class="text-right">
                                                                 <div class="btn-group">
 
@@ -938,6 +955,9 @@
                                                             </td>
                                                             <td>
                                                                 2
+                                                            </td>
+                                                            <td>
+                                                                365
                                                             </td>
                                                             <td class="text-right">
                                                                 <div class="btn-group">
@@ -958,6 +978,9 @@
                                                             <td>
                                                                 2
                                                             </td>
+                                                            <td>
+                                                                365
+                                                            </td>
                                                             <td class="text-right">
                                                                 <div class="btn-group">
 
@@ -977,6 +1000,9 @@
                                                             <td>
                                                                 2
                                                             </td>
+                                                            <td>
+                                                                365
+                                                            </td>
                                                             <td class="text-right">
                                                                 <div class="btn-group">
 
@@ -995,6 +1021,9 @@
                                                             </td>
                                                             <td>
                                                                 99
+                                                            </td>
+                                                            <td>
+                                                                365
                                                             </td>
                                                             <td class="text-right">
                                                                 <div class="btn-group">
