--- a/netishr/administrator_remuneration_settings.html
+++ b/netishr/administrator_remuneration_settings.html
@@ -654,7 +654,7 @@
                                             </tr>
                                             <tr class="gradeA">
                                                 <td>Leave Period Type</td>
-                                                <td>Leave Period Type : By Definition or By Start Working Date. If By Definition, setting [Leave Start Period, Leave End Period, Max Extended Leave End Period(1)] will be used. If By Start Working Date [Max Extended Leave End Period(2)] will be used</td>
+                                                <td>Leave Period Type : By Definition or By Start Working Date. If By Definition, setting [Cut Off Leave Period, Max Extended Leave End Period(1)] will be used. If By Start Working Date [Max Extended Leave End Period(2)] will be used</td>
                                                 <td>By Definition</td>
 
                                                 <td class="text-right">
@@ -664,9 +664,9 @@
                                                 </td>
                                             </tr>
                                             <tr class="gradeA">
-                                                <td>Leave Start Period</td>
-                                                <td>Leave Start Period</td>
-                                                <td>1 January</td>
+                                                <td>Cut Off Leave Period</td>
+                                                <td>Cut Off leave period. (Put End date of period) </td>
+                                                <td>31 December</td>
 
                                                 <td class="text-right">
                                                     <div class="btn-group">
@@ -675,9 +675,9 @@
                                                 </td>
                                             </tr>
                                             <tr class="gradeA">
-                                                <td>Leave End Period</td>
-                                                <td>Leave End Period. After Leave Start Period</td>
-                                                <td>31 December</td>
+                                                <td>Automatic Extend Period</td>
+                                                <td>Automatic Extend (Yes/No) mean employee automatically will be expired in Mas Extended Leave Period. If No, Employee need to use Leave extension request to extend its leave expire date </td>
+                                                <td>No</td>
 
                                                 <td class="text-right">
                                                     <div class="btn-group">
