--- a/netishr/leave.html
+++ b/netishr/leave.html
@@ -520,163 +520,7 @@
                                                 Hadi R.S.
                                             </td>
                                             <td>
-                                                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#Summary">Summary</button>
-                                                <div class="modal inmodal" id="Summary" tabindex="-1" role="dialog" aria-hidden="true">
-                                                    <div class="modal-dialog">
-                                                        <div class="modal-content animated bounceInRight">
-                                                            <div class="modal-header">
-                                                                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                                                <i class="fa fa-laptop modal-icon"></i>
-                                                                <h4 class="modal-title">Annual Leave Summary</h4>
-                                                            </div>
-                                                            <div class="modal-body">
-                                                                <div class="row">
-                                                                    <div>
-                                                                    <table class="footable table table-stripped toggle-arrow-tiny" data-page-size="15">
-                                                                        <thead>
-                                                                            <tr>
-                                                                                <th>Start Period</th>
-                                                                                <th>End Periode</th>
-                                                                                <th>Initial Leave Quota</th>
-                                                                                <th>Available Leave Quota</th>
-                                                                                <th>Initial Debt Leave Quota</th>
-                                                                                <th>Current Debt Leave Quota</th>
-                                                                                <th>Pending Approval Leave</th>
-                                                                                <th>Extended Period</th>
-                                                                                <th>Status</th>
-                                                                            </tr>
-                                                                        </thead>
-                                                                        <tbody>
-                                                                            <tr>
-                                                                                <td>
-                                                                                    14/10/2014
-                                                                                </td>
-                                                                                <td>
-                                                                                    31/12/2014
-                                                                                </td>
-                                                                                <td>
-                                                                                    2
-                                                                                </td>
-                                                                                <td>
-                                                                                    1
-                                                                                </td>
-                                                                                <td>
-                                                                                    12
-                                                                                </td>
-                                                                                <td>
-                                                                                    0
-                                                                                </td>
-                                                                                <td>
-                                                                                    0
-                                                                                </td>
-                                                                                <td>
-                                                                                    31/12/2014
-                                                                                </td>
-                                                                                <td>
-                                                                                    Expired
-                                                                                </td>
-                                                                            </tr>
-                                                                            <tr>
-                                                                                <td>
-                                                                                    01/01/2015
-                                                                                </td>
-                                                                                <td>
-                                                                                    31/12/2015
-                                                                                </td>
-                                                                                <td>
-                                                                                    12
-                                                                                </td>
-                                                                                <td>
-                                                                                    5
-                                                                                </td>
-                                                                                <td>
-                                                                                    12
-                                                                                </td>
-                                                                                <td>
-                                                                                    0
-                                                                                </td>
-                                                                                <td>
-                                                                                    0
-                                                                                </td>
-                                                                                <td>
-                                                                                    31/12/2015
-                                                                                </td>
-                                                                                <td>
-                                                                                    Expired
-                                                                                </td>
-                                                                            </tr>
-                                                                            <tr>
-                                                                                <td>
-                                                                                    01/01/2016
-                                                                                </td>
-                                                                                <td>
-                                                                                    31/12/2016
-                                                                                </td>
-                                                                                <td>
-                                                                                    10
-                                                                                </td>
-                                                                                <td>
-                                                                                    5
-                                                                                </td>
-                                                                                <td>
-                                                                                    12
-                                                                                </td>
-                                                                                <td>
-                                                                                    0
-                                                                                </td>
-                                                                                <td>
-                                                                                    0
-                                                                                </td>
-                                                                                <td>
-                                                                                    31/06/2017
-                                                                                </td>
-                                                                                <td>
-                                                                                    Expired
-                                                                                </td>
-                                                                            </tr>
-                                                                            <tr>
-                                                                                <td>
-                                                                                    01/01/2017
-                                                                                </td>
-                                                                                <td>
-                                                                                    31/12/2017
-                                                                                </td>
-                                                                                <td>
-                                                                                    10
-                                                                                </td>
-                                                                                <td>
-                                                                                    5
-                                                                                </td>
-                                                                                <td>
-                                                                                    12
-                                                                                </td>
-                                                                                <td>
-                                                                                    0
-                                                                                </td>
-                                                                                <td>
-                                                                                    0
-                                                                                </td>
-                                                                                <td>
-                                                                                    31/06/2017
-                                                                                </td>
-                                                                                <td>
-                                                                                    Expired
-                                                                                </td>
-                                                                            </tr>
-                                                                        </tbody>
-                                                                        <tfoot>
-                                                                        </tfoot>
-                                                                    </table>
-                                                                        
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                            <div class="modal-footer">
-                                                                <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>                                 
+                                                <a href="leavesummary.html"><button type="button" class="btn btn-primary btn-xs">Summary</button></a>
                                             </td>                                            
                                         </tr>
                                         <tr>
@@ -687,7 +531,7 @@
                                                 Hadi R.S.
                                             </td>
                                             <td>
-                                                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#Summary">Summary</button>
+                                                <a href="leavesummary.html"><button type="button" class="btn btn-primary btn-xs">Summary</button></a>
                                             </td>                                            
                                         </tr>
                                         <tr>
@@ -698,7 +542,7 @@
                                                 Hadi R.S.
                                             </td>
                                             <td>
-                                                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#Summary">Summary</button>
+                                                <a href="leavesummary.html"><button type="button" class="btn btn-primary btn-xs">Summary</button></a>
                                             </td>                                            
                                         </tr>
                                         <tr>
@@ -709,7 +553,7 @@
                                                 Hadi R.S.
                                             </td>
                                             <td>
-                                                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#Summary">Summary</button>
+                                                <a href="leavesummary.html"><button type="button" class="btn btn-primary btn-xs">Summary</button></a>
                                             </td>                                            
                                         </tr>
                                         <tr>
@@ -720,7 +564,7 @@
                                                 Hadi R.S.
                                             </td>
                                             <td>
-                                                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#Summary">Summary</button>
+                                                <a href="leavesummary.html"><button type="button" class="btn btn-primary btn-xs">Summary</button></a>
                                             </td>                                            
                                         </tr>
                                         <tr>
@@ -731,7 +575,7 @@
                                                 (All Employee)
                                             </td>
                                             <td>
-                                                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#Summary">Summary</button>
+                                                <a href="leavesummary.html"><button type="button" class="btn btn-primary btn-xs">Summary</button></a>
                                             </td>                                            
                                         </tr> 
                                     </tbody>
