Updated NetisHR files

--- a/netishr/Administrator_training_course_edit.html
+++ b/netishr/Administrator_training_course_edit.html
@@ -363,8 +363,11 @@
                         <li class="active">
                             <a href="administrator.html">Administrator</a>
                         </li>
+                        <li>
+                            <a href="administrator.html#training">Training</a>
+                        </li>
                         <li class="active">
-                            <strong>Training Courses</strong>
+                            <strong>Courses</strong>
                         </li>
                     </ol>
                 </div>
@@ -393,13 +396,47 @@
                             </div>
 
                             <div class="form-group">
-                                <label class="col-sm-2 control-label">Category</label>
+                                <label class="col-sm-2 control-label">Category
+                                </label>
+
                                 <div class="col-sm-6">
                                     <select data-placeholder="Choose a job title..." class="chosen-select" tabindex="2">
                                         <option selected value="1">Communication</option>
                                         <option value="2">Leadership</option>
                                         <option value="3">Programming</option>
                                     </select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-2"></div>
+                                <div class="col-sm-6">
+                                    Or, create
+                                    <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newInformation">New Category</button>
+                                    <div class="modal inmodal" id="newInformation" tabindex="-1" role="dialog" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content animated bounceInRight">
+                                                <div class="modal-header">
+                                                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                                    <i class="fa fa-laptop modal-icon"></i>
+                                                    <h4 class="modal-title">Training Category</h4>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <div class="form-group">
+                                                        <label class="control-label" for="order_id">Code</label>
+                                                        <input type="text" id="order_id" name="order_id" value="" placeholder="Code" class="form-control">
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <label class="control-label" for="Label">Label</label>
+                                                        <input type="text" id="status" name="status" value="" placeholder="Label" class="form-control">
+                                                    </div>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -410,18 +447,6 @@
                                         <option value="2">TW Team Work</option>
                                         <option value="2">ITL IT Literacy</option>
                                         <option value="3">BM Basic Marketing</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-sm-2 control-label">Minimum Competency Level</label>
-                                <div class="col-sm-6">
-                                    <select data-placeholder="Choose a Competency..." class="chosen-select" tabindex="2">
-                                        <option selected value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
                                     </select>
                                 </div>
                             </div>
