--- a/netishr/administrator_job_settings.html
+++ b/netishr/administrator_job_settings.html
@@ -363,7 +363,7 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a><a href="administrator.html">Administration</a>
+                            <a><a href="administrator.html">Administrator</a>
                         </li>
                         <li class="active">
                             <strong>Job Settings</strong>
