--- a/netishr/administrator_remuneration_payassignment_new.html
+++ b/netishr/administrator_remuneration_payassignment_new.html
@@ -384,7 +384,7 @@
                                     <a href="index.html">Home</a>
                                 </li>
                                 <li>
-                                    <a href="administrator.html">Administration</a>
+                                    <a href="administrator.html">Administrator</a>
                                 </li>
                                 <li>
                                     <a>Remuneration</a>
