--- a/netishr/administrator_remuneration_payslips_new.html
+++ b/netishr/administrator_remuneration_payslips_new.html
@@ -23,7 +23,7 @@
 
     <div id="wrapper">
 
-                        <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -364,7 +364,7 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="administrator.html">Administration</a>
+                            <a href="administrator.html">Administrator</a>
                         </li>
                         <li class="active">
                             <strong>Payslip</strong>
@@ -379,6 +379,8 @@
                 <div class="ibox float-e-margins">
                     <div class="ibox-content">
 
+                        <button type="button" class="btn btn-white btn">Back</button>
+                        <button type="button" class="btn btn-primary btn">Save</button>
                         <div class="form-group">
 
                             <label class="control-label">Payslip name:</label>
@@ -667,8 +669,8 @@
 
 
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save</button>
+                                <button type="button" class="btn btn-white btn">Back</button>
+                                <button type="button" class="btn btn-primary btn">Save</button>
                             </div>
 
                         </div>
