--- a/netishr/administrator_training_configuration_settings.html
+++ b/netishr/administrator_training_configuration_settings.html
@@ -367,7 +367,7 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="administrator.html">Administration</a>
+                            <a href="administrator.html">Administrator</a>
                         </li>
                         <li>
                             <a href="administrator.html#training">Training</a>
@@ -398,19 +398,7 @@
                                         <tbody>
                                             <tr class="gradeX">
                                                 <td>Curriculum Only</td>
-                                                <td>Employee can only see Training List based on his/her curriculum
-                                                </td>
-                                                <td>No
-                                                </td>
-                                                <td class="text-right">
-                                                    <div class="btn-group">
-                                                        <button class="btn-white btn btn-xs">Edit</button>
-                                                    </div>
-                                                </td>
-                                            </tr>
-                                            <tr class="gradeX">
-                                                <td>Show Fee</td>
-                                                <td>Show training fee to user
+                                                <td>Employee can only see training courses  List based on his/her curriculum
                                                 </td>
                                                 <td>No
                                                 </td>
