--- a/netishr/administrator_leave_configuration.html
+++ b/netishr/administrator_leave_configuration.html
@@ -372,7 +372,7 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a><a href="administrator.html">Administration</a>
+                            <a><a href="administrator.html">Administrator</a>
                         </li>
                         <li class="active">
                             <strong>Leave Configuration</strong>
