--- a/netishr/administrator_performance_evaluation.html
+++ b/netishr/administrator_performance_evaluation.html
@@ -385,7 +385,7 @@
                                     <a href="index.html">Home</a>
                                 </li>
                                 <li>
-                                    <a href="administrator.html">Administration</a>
+                                    <a href="administrator.html">Administrator</a>
                                 </li>
                                 <li>
                                     <a>Performance</a>
