--- a/netishr/administrator_remuneration_paysets.html
+++ b/netishr/administrator_remuneration_paysets.html
@@ -383,7 +383,7 @@
                                     <a href="index.html">Home</a>
                                 </li>
                                 <li>
-                                    <a href="administrator.html">Administration</a>
+                                    <a href="administrator.html">Administrator</a>
                                 </li>
                                 <li>
                                     <a>Remuneration</a>
