--- a/netishr/administrator_remuneration_paysets_new.html
+++ b/netishr/administrator_remuneration_paysets_new.html
@@ -23,7 +23,7 @@
 
     <div id="wrapper">
 
-                        <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -364,7 +364,7 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="administrator.html">Administration</a>
+                            <a href="administrator.html">Administrator</a>
                         </li>
                         <li class="active">
                             <strong>Paysets</strong>
@@ -376,6 +376,8 @@
                 <div class="ibox float-e-margins">
                     <div class="ibox-content">
 
+                        <button type="button" class="btn btn-white btn">Back</button>
+                        <button type="button" class="btn btn-primary btn">Save</button>
                         <div class="form-group">
 
                             <label class="control-label">Payset name:</label>
@@ -501,8 +503,8 @@
 
 
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save</button>
+                                <button type="button" class="btn btn-white btn">Back</button>
+                                <button type="button" class="btn btn-primary btn">Save</button>
                             </div>
 
                         </div>
@@ -510,14 +512,14 @@
                 </div>
 
             </div>
-<div class="footer">
-    <div class="pull-right">
-        <strong>Version</strong> 2.x.xxxx.
-    </div>
-    <div>
-        <strong>Copyright</strong> Netika Indonesia &copy; 2016
-    </div>
-</div>
+            <div class="footer">
+                <div class="pull-right">
+                    <strong>Version</strong> 2.x.xxxx.
+                </div>
+                <div>
+                    <strong>Copyright</strong> Netika Indonesia &copy; 2016
+                </div>
+            </div>
         </div>
     </div>
 
