--- a/netishr/administrator_remuneration_payslipitems_new.html
+++ b/netishr/administrator_remuneration_payslipitems_new.html
@@ -364,7 +364,7 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="administrator.html">Administration</a>
+                            <a href="administrator.html">Administrator</a>
                         </li>
                         <li class="active">
                             <strong>Payslip Items</strong>
