--- a/netishr/administrator_shift_settings.html
+++ b/netishr/administrator_shift_settings.html
@@ -385,7 +385,7 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a><a href="administrator.html">Administration</a>
+                            <a><a href="administrator.html">Administrator</a>
                         </li>
                         <li class="active">
                             <strong>Shift Settings</strong>
