--- a/netishr/administrator_training_category.html
+++ b/netishr/administrator_training_category.html
@@ -369,7 +369,7 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="administrator.html">Administration</a>
+                            <a href="administrator.html">Administrator</a>
                         </li>
                         <li>
                             <a href="administrator.html#training">Training</a>
